# NUCLEO-Test

./: .mxproject  .stm32env  CMakeLists.txt  NUCLEOTest.ioc  README.md  STM32-for-VSCode.config.yaml  STM32Make.make  openocd.cfg  stm32f767zitx_flash.ld  voltCodeTest.c
Core/Inc/: adc.h  dac.h  i2c.h  ltc2620.h  main.h  spi.h  stm32f7xx_it.h  usart.h
Core/Src/: adc.c  dac.c  gpio.c  i2c.c  ltc2620.c  main.c  spi.c  stm32f7xx_it.c  usart.c
cmake/: gcc-arm-none-eabi.cmake
cmake/stm32cubemx/: CMakeLists.txt
